# nanogpt-rs

./: .env  .gitignore  Cargo.toml  TODOS.md  output.txt
src/: config.rs  data.rs  main.rs  model.rs  train.rs  wandb.rs
