[package]
name = "nanogpt-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.20.1", features = ["tch", "train", "dataset"] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tiktoken-rs = "0.11.0"

[profile.dev]
opt-level = 0
debug = false
